--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "vee-validate": "^2.1.0-beta.6",
     "vue": "^2.5.16",
     "vue-awesome-swiper": "^3.1.3",
-    "vuelidate": "^0.7.4"
+    "vue-sweetalert2": "^1.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.5",
